finished some website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--Template Name: vacayhome
-File Name: home.html
-Author Name: ThemeVault
-Author URI: http://www.themevault.net/
-License URI: http://www.themevault.net/license/-->
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -11,7 +5,7 @@ License URI: http://www.themevault.net/license/-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="images/icons/favicon.png"/>
-        <title>vacayhome</title>
+        <title>Tomodachi</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -58,8 +52,8 @@ License URI: http://www.themevault.net/license/-->
                             <div class="col-md-2 col-sm-6 col-xs-6">
                                 <div id="logo">
                                     <!--<a href="index.html"><img src="images/logo.png" alt="logo"></a>-->
-                                    <a href="index.html"><span>vacay</span>home</a>
-                                </div>                       
+                                    <a href="index.html"><span>Tomo</span>dachi</a>
+                                </div>
                             </div>
                             <div class="col-sm-6 visible-sm">
                                 <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
@@ -78,19 +72,19 @@ License URI: http://www.themevault.net/license/-->
                                     <div class="collapse navigation navbar-collapse navbar-ex1-collapse remove-space">
                                         <ul class="list-unstyled nav1 cl-effect-10">
                                             <li><a  data-hover="Home" class="active"><span>Home</span></a></li>
-                                            <li><a data-hover="About"  href="about.html"><span>About</span></a></li>
-                                            <li><a data-hover="Rooms"  href="rooms.html"><span>Rooms</span></a></li>
-                                            <li><a data-hover="Gallery"  href="gallery.html"><span>Gallery</span></a></li>
-                                            <li><a data-hover="Dinning" href="dinning.html"><span>Dinning</span></a></li>
-                                            <li><a data-hover="News" href="news.html"><span>News</span></a></li>
-                                            <li><a data-hover="Contact Us" href="contact.html"><span>contact Us</span></a></li>
+                                            <li><a data-hover="About"  href="about.html"><span>Conventions</span></a></li>
+                                            <li><a data-hover="Rooms"  href="rooms.html"><span>Map</span></a></li>
+                                            <li><a data-hover="Gallery"  href="gallery.html"><span>Chat</span></a></li>
+                                            <li><a data-hover="Dinning" href="dinning.html"><span>Public</span></a></li>
+                                            <li><a data-hover="News" href="news.html"><span>Connect</span></a></li>
+                                            <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
 
                                     </div>
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn">Log In</button></div>
                             </div>
                         </div>
                     </div>
@@ -99,7 +93,7 @@ License URI: http://www.themevault.net/license/-->
 
 
             <!--end-->
-            <div id="myCarousel1" class="carousel slide" data-ride="carousel"> 
+            <div id="myCarousel1" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
 
                 <ol class="carousel-indicators">
@@ -110,17 +104,17 @@ License URI: http://www.themevault.net/license/-->
                 <div class="carousel-inner">
                     <div class="item active"> <img src="images/banner.png" style="width:100%; height: 500px" alt="First slide">
                         <div class="carousel-caption">
-                            <h1>vacayhome<br> spa & Resort</h1>
+                            <h1>Friends</h1><br><h2>Find tomo-dachis to go to conventions with!</h2>
                         </div>
                     </div>
                     <div class="item"> <img src="images/banner2.png" style="width:100%; height: 500px" alt="Second slide">
                         <div class="carousel-caption">
-                            <h1>vacayhome<br> spa & Resort</h1>
+                            <h1>Memories</h1><br><h2>Make everlasting friendships and memories!</h2>
                         </div>
                     </div>
                     <div class="item"> <img src="images/banner3.png" style="width:100%; height: 500px" alt="Third slide">
                         <div class="carousel-caption">
-                            <h1>vacayhome<br> spa & Resort</h1>
+                            <h1>Adventures</h1><br><h2>Meet new faces, share interests, go have fun!</h2>
                         </div>
                     </div>
 
@@ -445,7 +439,7 @@ License URI: http://www.themevault.net/license/-->
                                 </ul>
                                 <div class="footer-social-icon">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>                           
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
                                     <a href="#"><i class="fa fa-instagram"></i></a>
                                     <a href="#"><i class="fa fa-google-plus"></i></a>
                                     <a href="#"><i class="fa fa-youtube-play"></i></a>
