--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
             </div>
             <div class="clearfix"></div>
 
-            <!--service block--->
+            <!--service block
             <section class="service-block">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-3 col-sm-3 col-xs-6 width-50">
                             <div class="service-details text-center">
-                                <div class="service-image">
+                                <div class="service-image">T
                                     <img alt="image" class="img-responsive" src="images/icons/wifi.png">
                                 </div>
                                 <h4><a>free wifi</a></h4>
@@ -163,9 +163,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
-            <!--gallery block--->
+            <!--gallery block
             <section class="gallery-block gallery-front">
                 <div class="container">
                     <div class="row">
@@ -207,9 +207,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
-            <!--offer block-->
+            <!--offer block
             <section class="vacation-offer-block">
                 <div class="vacation-offer-bgbanner">
                     <div class="container">
@@ -224,10 +224,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <!--End-->
+            </section>-->
 
-            <!----resort-overview--->
+            <!--resort-overview--->
             <section class="resort-overview-block">
                 <div class="container">
                     <div class="row">
@@ -241,8 +240,8 @@
                             </div>
                             <div class="side-B">
                                 <div class="product-desc-side">
-                                    <h3><a>luxury spa</a></h3>
-                                    <p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nunc lorem nulla, ornare eu felis luctus non maximus vitae, portt neque. ipsum dolor sit amet, consec adipiscing elit.</p>
+                                    <h3><a>Conventions</a></h3>
+                                    <p>View all-in-one list of conventions worldwide. Trust our up-to-date and verified with other sources list!</p>
                                     <div class="links"><a href="single-blog.html">Read more</a></div>
                                 </div>
                             </div>
@@ -258,8 +257,8 @@
                             </div>
                             <div class="side-B">
                                 <div class="product-desc-side">
-                                    <h3><a>Beatusish ingl</a></h3>
-                                    <p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nunc lorem nulla, ornare eu felis luctus non maximus vitae, portt neque. ipsum dolor sit amet, consec adipiscing elit.</p>
+                                    <h3><a>Worldwide Map</a></h3>
+                                    <p>With easy-to-see world map, see if there are any cons near you!</p>
                                     <div class="links"><a href="single-blog.html">Read more</a></div>
                                 </div>
                             </div>
@@ -268,8 +267,8 @@
                         <div class="col-md-6 col-sm-12 col-xs-12 remove-padd-right">
                             <div class="side-A">
                                 <div class="product-desc-side">
-                                    <h3><a>luxury room</a></h3>
-                                    <p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nunc lorem nulla, ornare eu felis luctus non maximus vitae, portt neque. ipsum dolor sit amet, consec adipiscing elit.</p>
+                                    <h3><a>Chat with friends!</a></h3>
+                                    <p>You can form groups and plan with them! Send private messages to users!</p>
                                     <div class="links"><a href="single-blog.html">Read more</a></div>
                                 </div>
                             </div>
@@ -286,8 +285,8 @@
                         <div class="col-md-6 col-sm-12 col-xs-12 remove-padd-left">
                             <div class="side-A">
                                 <div class="product-desc-side">
-                                    <h3><a>heaven seanery</a></h3>
-                                    <p>Lorem ipsum dolor sit amet, consec adipiscing elit. Nunc lorem nulla, ornare eu felis luctus non maximus vitae, portt neque. ipsum dolor sit amet, consec adipiscing elit.</p>
+                                    <h3><a>Join community</a></h3>
+                                    <p>Join the community chat for each convention to see what others are up to!</p>
                                     <div class="links"><a href="single-blog.html">Read more</a></div>
                                 </div>
                             </div>
