--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                                     <div class="collapse navigation navbar-collapse navbar-ex1-collapse remove-space">
                                         <ul class="list-unstyled nav1 cl-effect-10">
                                             <li><a  data-hover="Home" class="active"><span>Home</span></a></li>
-                                            <li><a data-hover="About"  href="about.html"><span>Conventions</span></a></li>
-                                            <li><a data-hover="Rooms"  href="rooms.html"><span>Map</span></a></li>
-                                            <li><a data-hover="Gallery"  href="gallery.html"><span>Chat</span></a></li>
-                                            <li><a data-hover="Dinning" href="dinning.html"><span>Public</span></a></li>
-                                            <li><a data-hover="News" href="news.html"><span>Connect</span></a></li>
+                                            <li><a data-hover="Conventions"  href="about.html"><span>Conventions</span></a></li>
+                                            <li><a data-hover="Map"  href="rooms.html"><span>Map</span></a></li>
+                                            <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
+                                            <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
+                                            <li><a data-hover="Connect" href="news.html"><span>Connect</span></a></li>
                                             <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
 
@@ -267,7 +267,7 @@
                         <div class="col-md-6 col-sm-12 col-xs-12 remove-padd-right">
                             <div class="side-A">
                                 <div class="product-desc-side">
-                                    <h3><a>Chat with friends!</a></h3>
+                                    <h3><a>Chat with friends</a></h3>
                                     <p>You can form groups and plan with them! Send private messages to users!</p>
                                     <div class="links"><a href="single-blog.html">Read more</a></div>
                                 </div>
@@ -320,7 +320,7 @@
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
                                     <div class="blog-box">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only</p>
+                                        <p>I met few friends here and we went to anime con together :) it was better than going alone bc I can do activities with others.</p>
                                     </div>
                                     <div class="blog-view-box">
                                         <div class="media">
@@ -328,40 +328,40 @@
                                                 <img src="images/client1.png" class="media-object">
                                             </div>
                                             <div class="media-body">
-                                                <h3 class="media-heading blog-title">Walter Hucko</h3>
-                                                <h5 class="blog-rev">Satisfied Customer</h5>
+                                                <h3 class="media-heading blog-title">Anonymous</h3>
+                                                <h5 class="blog-rev">Member</h5>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="blog-box">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only</p>
+                                        <p>Haven't really seen anything like this before, I like how they list all the animecons so I don't have to go search.</p>
                                     </div>
                                     <div class="blog-view-box">
                                         <div class="media">
                                             <div class="media-left">
-                                                <img src="images/client2.png" class="media-object">
+                                                <img src="images/client1.png" class="media-object">
                                             </div>
                                             <div class="media-body">
-                                                <h3 class="media-heading blog-title">Jules Boutin</h3>
-                                                <h5 class="blog-rev">Satisfied Customer</h5>
+                                                <h3 class="media-heading blog-title">Anonymous</h3>
+                                                <h5 class="blog-rev">Member</h5>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="blog-box">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only</p>
+                                        <p>I still keep in touch with friends I have made here. It's amazing how people can connect through interests and can find community that loves you!</p>
                                     </div>
                                     <div class="blog-view-box">
                                         <div class="media">
                                             <div class="media-left">
-                                                <img src="images/client3.png" class="media-object">
+                                                <img src="images/client1.png" class="media-object">
                                             </div>
                                             <div class="media-body">
-                                                <h3 class="media-heading blog-title">Attilio Marzi</h3>
-                                                <h5 class="blog-rev">Satisfied Customer</h5>
+                                                <h3 class="media-heading blog-title">Anonymous</h3>
+                                                <h5 class="blog-rev">Member</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -373,7 +373,7 @@
                 <div class="clearfix"></div>
             </section>
 
-            <!---blog block--->
+            <!---blog block
             <section class="blog-block">
                 <div class="container">
                     <div class="row offspace-45">
@@ -413,27 +413,27 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
             <!---footer--->
             <footer>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-3 col-sm-6 col-xs-12 width-set-50">
+                        <div class="col-md-3 col-sm-6 col-xs-12 width-set-100">
                             <div class="footer-details">
                                 <h4>Get in touch</h4>
                                 <ul class="list-unstyled footer-contact-list">
                                     <li>
                                         <i class="fa fa-map-marker fa-lg"></i>
-                                        <p>701 Old York Drive Richmond USA.</p>
+                                        <p>1066 Trojan Ave San Leandro, CA</p>
                                     </li>
                                     <li>
                                         <i class="fa fa-phone fa-lg"></i>
-                                        <p><a href="tel:+1-202-555-0100"> +1-202-555-0100</a></p>
+                                        <p><a href="tel: 408-805-2688"> 408-805-2688</a></p>
                                     </li>
                                     <li>
                                         <i class="fa fa-envelope-o fa-lg"></i>
-                                        <p><a href="mailto:demo@info.com"> demo@info.com</a></p>
+                                        <p><a href="mailto:tomodachiconventions@gmail.com"> tomodachiconventions@gmail.com</a></p>
                                     </li>
                                 </ul>
                                 <div class="footer-social-icon">
@@ -456,16 +456,16 @@
                                 <h4>explore</h4>
                                 <ul class="list-unstyled footer-links">
                                     <li class="active"><a>Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="rooms.html">Rooms</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
-                                    <li><a href="#">Dinning</a></li>
-                                    <li> <a href="news.html">News</a></li>
+                                    <li><a href="about.html">Conventions</a></li>
+                                    <li><a href="rooms.html">Map</a></li>
+                                    <li><a href="gallery.html">Chat</a></li>
+                                    <li><a href="#">MegaChat</a></li>
+                                    <li> <a href="news.html">Connect</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-md-6 col-sm-12 col-xs-12">
+                        <!--<div class="col-md-6 col-sm-12 col-xs-12">
                             <div class="footer-details">
                                 <h4>Now On Instagram</h4>
                                 <div class="row">
@@ -475,10 +475,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="copyright">
-                        &copy; 2017 All right reserved. Designed by <a href="http://www.themevault.net/" target="_blank">ThemeVault.</a>
+                        &copy; 2017 All right reserved.
                     </div>
 
                 </div>
