did some conventions

--- a/index.html
+++ b/index.html
@@ -465,9 +465,9 @@
                                 </ul>
                             </div>
                         </div>
-                        <!--<div class="col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-md-6 col-sm-12 col-xs-12">
                             <div class="footer-details">
-                                <h4>Now On Instagram</h4>
+                                <h4>Coming Soon: Mobile Applications</h4>
                                 <div class="row">
                                     <div class="instagram-images">
                                         <div id="instafeed"></div>
@@ -475,7 +475,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>-->
+                    </div>
 
                     <div class="copyright">
                         &copy; 2017 All right reserved.
