--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ License URI: http://www.themevault.net/license/-->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="images/icons/favicon.png"/>
-        <title>vacayhome</title>
+        <title>Tomodachi</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -55,11 +55,11 @@ License URI: http://www.themevault.net/license/-->
                             <div class="col-md-2 col-sm-6 col-xs-6">
                                 <div id="logo">
                                     <!--<a href="index.html"><img src="images/logo.png" alt="logo"></a>-->
-                                    <a href="index.html"><span>vacay</span>home</a>
-                                </div>                       
+                                    <a href="index.html"><span>Tomo</span>dachi</a>
+                                </div>
                             </div>
                             <div class="col-sm-6 visible-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn">Log In</button></div>
                             </div>
                             <div class="col-md-8 col-sm-12 col-xs-12 remove-padd">
                                 <nav class="navbar navbar-default">
@@ -75,18 +75,18 @@ License URI: http://www.themevault.net/license/-->
                                     <div class="collapse navigation navbar-collapse navbar-ex1-collapse remove-space">
                                         <ul class="list-unstyled nav1 cl-effect-10">
                                             <li><a data-hover="Home" href="index.html"><span>Home</span></a></li>
-                                            <li><a data-hover="About"  class="active"><span>About</span></a></li>
-                                            <li><a data-hover="Rooms" href="rooms.html"><span>Rooms</span></a></li>
-                                            <li><a data-hover="Gallery"  href="gallery.html"><span>Gallery</span></a></li>
-                                            <li><a data-hover="Dinning" href="dinning.html"><span>Dinning</span></a></li>
-                                            <li><a data-hover="News" href="news.html"><span>News</span></a></li>
-                                            <li><a data-hover="Contact Us" href="contact.html"><span>contact Us</span></a></li>
+                                            <li><a data-hover="Conventions"  class="active"><span>Conventions</span></a></li>
+                                            <li><a data-hover="Map"  href="rooms.html"><span>Map</span></a></li>
+                                            <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
+                                            <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
+                                            <li><a data-hover="Connect" href="news.html"><span>Connect</span></a></li>
+                                            <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
                                     </div>
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn">Log In</button></div>
                             </div>
                         </div>
                     </div>
@@ -94,13 +94,43 @@ License URI: http://www.themevault.net/license/-->
             </header>
 
 
-            <!--end-->
+            <!--end
             <section class="image-head-wrapper" style="background-image: url('images/banner3.jpg');">
                 <div class="inner-wrapper">
                     <h1>About us</h1>
                 </div>
             </section>
-            <div class="clearfix"></div>
+            <div class="clearfix"></div>-->
+            <table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
 
 
             <section class="about-block">
@@ -149,7 +179,7 @@ License URI: http://www.themevault.net/license/-->
                                 </ul>
                                 <div class="footer-social-icon">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>                           
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
                                     <a href="#"><i class="fa fa-instagram"></i></a>
                                     <a href="#"><i class="fa fa-google-plus"></i></a>
                                     <a href="#"><i class="fa fa-youtube-play"></i></a>
