--- a/nekotable/index.html
+++ b/nekotable/index.html
@@ -6,8 +6,7 @@
   <title>CSV to HTML table</title>
   
   
-  <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
-
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
       <style>
       /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
       @import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700|Open+Sans:400,800);
@@ -282,11 +281,11 @@ textarea {
 				</div>
 		</div>
 </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
   
 
-    <script  src="js/index.js"></script>
+    <script  src="https://tomodachi.gq/js/index.js"></script>
 
 
 
