--- a/nekotable/index.html
+++ b/nekotable/index.html
@@ -285,7 +285,7 @@ textarea {
 
   
 
-    <script  src="https://tomodachi.gq/js/index.js"></script>
+    <script  src="js/index.js"></script>
 
 
 
