remove box thing

--- a/about.html
+++ b/about.html
@@ -120,6 +120,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 textarea {
+	display: none;
 	font-family: 'Inconsolata', monospace ;
 	width: 95%;
 	background-color: #eee;
