remove box thing

--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@ License URI: http://www.themevault.net/license/-->
                 </div>
             </section>
             <div class="clearfix"></div>-->
-  <p id="mytab1">hi</p>
+<!--  <p id="mytab1">hi</p>-->
 <!DOCTYPE html>
 <html lang="en" >
 
