--- a/rooms.html
+++ b/rooms.html
@@ -1,8 +1,3 @@
-<!--Template Name: vacayhome
-File Name: rooms.html
-Author Name: ThemeVault
-Author URI: http://www.themevault.net/
-License URI: http://www.themevault.net/license/-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -119,13 +114,13 @@ License URI: http://www.themevault.net/license/-->
     };
     var map = new google.maps.Map(document.getElementById('map_canvas'),mapOptions);
     infowindow = new google.maps.InfoWindow({ content: "Convention" });
-	//		infowindow = new google.maps.InfoWindow ({ 
+	//		infowindow = new google.maps.InfoWindow ({
 	//			size: new google.maps.Size(250,150)
 	//		});
     get_the_cons(map);
   }
   function add_convention(map,location,name) {
-    
+
     return marker;
   }
   google.maps.event.addDomListener(window, 'load', initialize);
@@ -268,7 +263,7 @@ poop = poop.slice(0, -1);
                                 <ul class="list-unstyled footer-contact-list">
                                     <li>
                                         <i class="fa fa-map-marker fa-lg"></i>
-                                        <p>1066 Trojan Ave San Leandro, CA</p>
+                                        <p><a href="loc: 1066 Trojan Ave San Leandro, CA">1066 Trojan Ave San Leandro, CA</a></p>
                                     </li>
                                     <li>
                                         <i class="fa fa-phone fa-lg"></i>
