updated some buttons

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                 <div class="product-desc-side">
                                     <h3><a>Conventions</a></h3>
                                     <p>View all-in-one list of conventions worldwide. Trust our up-to-date and verified with other sources list!</p>
-                                    <div class="links"><a href="single-blog.html">Read more</a></div>
+                                    <div class="links"><a href="about.html">Read more</a></div>
                                 </div>
                             </div>
                         </div>
@@ -259,7 +259,7 @@
                                 <div class="product-desc-side">
                                     <h3><a>Worldwide Map</a></h3>
                                     <p>With easy-to-see world map, see if there are any cons near you!</p>
-                                    <div class="links"><a href="single-blog.html">Read more</a></div>
+                                    <div class="links"><a href="rooms.html">Read more</a></div>
                                 </div>
                             </div>
                         </div>
@@ -305,7 +305,7 @@
                 </div>
             </section>
 
-            <!-----blog slider----->
+            <!---blog slider----->
             <!--blog trainer block-->
             <section class="blog-block-slider">
                 <div class="blog-block-slider-fix-image">
