--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                                 <ul class="list-unstyled footer-contact-list">
                                     <li>
                                         <i class="fa fa-map-marker fa-lg"></i>
-                                        <p>1066 Trojan Ave San Leandro, CA</p>
+                                        <p>San Francisco Bay Area, CA</p>
                                     </li>
                                     <li>
                                         <i class="fa fa-phone fa-lg"></i>
