--- a/about.html
+++ b/about.html
@@ -421,7 +421,7 @@ December 22-23, 2018;Comic Fiesta 2018;Kuala Lumpur, Malaysia;Anime;Active
                                 <ul class="list-unstyled footer-contact-list">
                                     <li>
                                         <i class="fa fa-map-marker fa-lg"></i>
-                                        <p>1066 Trojan Ave San Leandro, CA</p>
+                                        <p>San Francisco Bay Area, CA</p>
                                     </li>
                                     <li>
                                         <i class="fa fa-phone fa-lg"></i>
