--- a/rooms.html
+++ b/rooms.html
@@ -263,7 +263,7 @@ poop = poop.slice(0, -1);
                                 <ul class="list-unstyled footer-contact-list">
                                     <li>
                                         <i class="fa fa-map-marker fa-lg"></i>
-                                        <p><a href="loc: 1066 Trojan Ave San Leandro, CA">1066 Trojan Ave San Leandro, CA</a></p>
+                                        <p><a href="loc: San Francisco Bay Area, CA">San Francisco Bay Area, CA</a></p>
                                     </li>
                                     <li>
                                         <i class="fa fa-phone fa-lg"></i>
