--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn">Log In</button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn"><a href="login/index.php">Log In</a></button></div>
                             </div>
                         </div>
                     </div>
