--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn"><a href="login.php" style="color:#FFFFFF";>Log in</a></button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn"><a href="Agora/?action=login" style="color:#FFFFFF";>Log in</a></button></div>
                             </div>
                         </div>
                     </div>
