--- a/gallery.html
+++ b/gallery.html
@@ -70,23 +70,23 @@
                                         <ul class="list-unstyled nav1 cl-effect-10">
                                             <li><a data-hover="Home" href="index.html"><span>Home</span></a></li>
                                             <li><a data-hover="Conventions"  href="about.html"><span>Conventions</span></a></li>
-                                            <li><a data-hover="Map"  href="rooms.html"><span>Map</span></a></li>
+                                            <li><a data-hover="Profile"  href="rooms.html"><span>Profile</span></a></li>
                                             <li><a data-hover="Chat"  class="active"><span>Chat</span></a></li>
                                             <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
-                                            <li><a data-hover="Connect" href="news.html"><span>Connect</span></a></li>
+                                            <li><a data-hover="Forum" href="news.html"><span>Forum</span></a></li>
                                             <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
                                     </div>
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn"><a href="login.php" style="color:#FFFFFF";>Log in</a></button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn"><a href="Agora/?action=login" style="color:#FFFFFF";>Log in</a></button></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </header>
-
+            <div style="padding-left:20%">You must log in to view your profile and your friends. It only takes a few seconds!</div>
 
             <!--end
             <section class="image-head-wrapper" style="background-image: url('images/banner3.jpg');">
@@ -169,10 +169,10 @@
                                 <ul class="list-unstyled footer-links">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">Conventions</a></li>
-                                    <li><a href="rooms.html">Map</a></li>
+                                    <li><a href="rooms.html">Profile</a></li>
                                     <li class="active"><a>Chat</a></li>
                                     <li><a href="#">MegaChat</a></li>
-                                    <li> <a href="news.html">Connect</a></li>
+                                    <li> <a href="news.html">Forum</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
