--- a/news.html
+++ b/news.html
@@ -71,17 +71,17 @@
                                         <ul class="list-unstyled nav1 cl-effect-10">
                                             <li><a data-hover="Home" href="index.html"><span>Home</span></a></li>
                                             <li><a data-hover="Conventions"  href="about.html"><span>Conventions</span></a></li>
-                                            <li><a data-hover="Map"  href="rooms.html"><span>Map</span></a></li>
+                                            <li><a data-hover="Profile"  href="rooms.html"><span>Profile</span></a></li>
                                             <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
                                             <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
-                                            <li><a data-hover="Connect" class="active"><span>Connect</span></a></li>
+                                            <li><a data-hover="Forum" class="active"><span>Forum</span></a></li>
                                             <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
                                     </div>
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn"><a href="login.php" style="color:#FFFFFF";>Log in</a></button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn"><a href="Agora/?action=login" style="color:#FFFFFF";>Log in</a></button></div>
                             </div>
                         </div>
                     </div>
@@ -170,10 +170,10 @@
                                 <ul class="list-unstyled footer-links">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">Conventions</a></li>
-                                    <li><a href="rooms.html">Map</a></li>
+                                    <li><a href="rooms.html">Profile</a></li>
                                     <li><a href="gallery.html">Chat</a></li>
                                     <li><a href="#">MegaChat</a></li>
-                                    <li class="active"><a>Connect</a></li>
+                                    <li class="active"><a>Forum</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
