--- a/rooms.html
+++ b/rooms.html
@@ -71,17 +71,17 @@
                                         <ul class="list-unstyled nav1 cl-effect-10">
                                             <li><a  data-hover="Home" href="index.html"><span>Home</span></a></li>
                                             <li><a data-hover="Conventions"  href="about.html"><span>Conventions</span></a></li>
-                                            <li><a data-hover="Map"  class="active"><span>Map</span></a></li>
+                                            <li><a data-hover="Profile"  class="active"><span>Profile</span></a></li>
                                             <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
                                             <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
-                                            <li><a data-hover="Connect" href="news.html"><span>Connect</span></a></li>
+                                            <li><a data-hover="Forum" href="news.html"><span>Forum</span></a></li>
                                             <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
                                     </div>
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn"><a href="login.php" style="color:#FFFFFF";>Log in</a></button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn"><a href="Agora/?action=login" style="color:#FFFFFF";>Log in</a></button></div>
                             </div>
                         </div>
                     </div>
@@ -96,76 +96,7 @@
                 </div>
             </section>
             <div class="clearfix"></div>-->
-<style type="text/css">
-  #map_area { padding: 0px 20px; }
-  #map_canvas { height: 100%; margin: 0; padding: 0; width: 100%; min-width: 400px; margin: 20px auto; height: 500px; padding: 0px;}
-  #info_window { height: 150px; width: 250px; overflow: scroll; }
-  p { color: #555; font: 16px/24px Tahoma,Arial,sans-serif; padding: 10px 20px; }
-</style>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDa9_i0NzxwjWG8biuJTobxpFFVYlE0qRA">
-</script>
-<script type="text/javascript">
-  var cons = [];
-  var infowindow;
-  function initialize() {
-    var mapOptions = {
-      center: { lat: 41.87, lng: -87.62},
-      zoom: 2
-    };
-    var map = new google.maps.Map(document.getElementById('map_canvas'),mapOptions);
-    infowindow = new google.maps.InfoWindow({ content: "Convention" });
-	//		infowindow = new google.maps.InfoWindow ({
-	//			size: new google.maps.Size(250,150)
-	//		});
-    get_the_cons(map);
-  }
-  function add_convention(map,location,name) {
-
-    return marker;
-  }
-  google.maps.event.addDomListener(window, 'load', initialize);
-  get_the_cons = function get_the_cons(map) {
-    var req = new XMLHttpRequest();
-    req.onreadystatechange = function (e) { process_the_cons (req,map); }
-    req.open('GET', '/upcomingcons.csv', true);
-    req.send(null);
-  }
-  process_the_cons = function process_the_cons(req,map) {
-    if(req.readyState==4 && req.status == 200) {
-      cons_list = req.responseText.split("\n");
-      for (i = 0; i < cons_list.length; ++i) {
-        coninfo = cons_list[i].split(",");
-        cons[i] = coninfo[2];
-        var location = new google.maps.LatLng(coninfo[0],coninfo[1]);
-        var marker = new google.maps.Marker({
-          position: location,
-          map: map,
-          title: coninfo[2]+"--"+coninfo[3]+"--"+coninfo[4]+"--"+coninfo[5]+"--"+coninfo[6]
-        });
-        google.maps.event.addListener(marker, 'click', function() {
-          //infowindow.setContent("<div id='info_window'><h2><a href='/upcomingcons/"+this.title.split("--")[2]+"'>"+this.title.split("--")[0]+"</a></h2><p>"+this.title.split("--")[1]+"</p></div>");
-var gq1 = this.title.split("--")[3];
-if(gq1.slice(0,1) === '\"'){
-gq1 = gq1.substring(1);
-
-}
-var gq2 = this.title.split("--")[4];
-if(gq2.substr(1) === '\"'){
-gq2 = gq2.substring(1);
-
-}
-var poop = gq1+", "+gq2;
-if (poop.substr(-1) === '\"'){
-poop = poop.slice(0, -1);
-}
-          infowindow.setContent("<div id='info_window'><h2><a href='/upcomingcons/"+this.title.split("--")[2]+"'>"+this.title.split("--")[0]+"</a></h2><p>"+this.title.split("--")[1].substring(1)+"<br />"+poop+"</p></div>");
-          infowindow.open(map,this);
-        });
-      }
-    }
-  }
-</script>
-<div id="map_area"><div id="map_canvas"></div></div>
+            <div style="padding-left:20%">You must log in to view your profile and your friends. It only takes a few seconds!</div>
 
             <!--gallery block
             <section class="gallery-block gallery-front">
@@ -295,10 +226,10 @@ poop = poop.slice(0, -1);
                                 <ul class="list-unstyled footer-links">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">Conventions</a></li>
-                                    <li class="active"><a>Map</a></li>
+                                    <li class="active"><a>Profile</a></li>
                                     <li><a href="gallery.html">Chat</a></li>
                                     <li><a href="#">MegaChat</a></li>
-                                    <li> <a href="news.html">Connect</a></li>
+                                    <li> <a href="news.html">Forum</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
