--- a/gallery.html
+++ b/gallery.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </header>
-            <div style="padding-left:20%">You must log in to view your profile and your friends. It only takes a few seconds!</div>
+            <div style="padding-left:20%">You must log in to form group and chat your friends. It only takes a few seconds!</div>
 
             <!--end
             <section class="image-head-wrapper" style="background-image: url('images/banner3.jpg');">
