--- a/news.html
+++ b/news.html
@@ -98,6 +98,7 @@
             <div class="clearfix"></div>-->
 <!--  <p id="mytab1">hi</p>-->
 
+<center><iframe src="https://tomodachi.gq/Agora/index.php" height="800" width="1200"></iframe></center>
 
 
 
