--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                                             <li><a data-hover="Conventions" href="about.html"><span>Conventions</span></a></li>
                                             <li><a data-hover="Profile" href="rooms.html"><span>Profile</span></a></li>
                                             <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
-                                            <li><a data-hover="Megachat" href="dinning.html"><span>Megachat</span></a></li>
+                                            <li><a data-hover="Discord" href="dinning.html"><span>Discord</span></a></li>
                                             <li><a data-hover="Forum" href="news.html"><span>Forum</span></a></li>
                                             <li><a data-hover="Contact Us" class="active"><span>contact Us</span></a></li>
                                         </ul>
@@ -174,7 +174,7 @@
                                     <li><a href="about.html">Conventions</a></li>
                                     <li><a href="rooms.html">Profile</a></li>
                                     <li><a href="gallery.html">Chat</a></li>
-                                    <li><a href="#">Megachat</a></li>
+                                    <li><a href="dinning.html">Discord</a></li>
                                     <li> <a href="news.html">Forum</a></li>
                                     <li class="active"> <a href="contact.html">Contact</a></li>
                                 </ul>
