--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.5/css/fork-awesome.min.css" integrity="sha256-P64qV9gULPHiZTdrS1nM59toStkgjM0dsf5mK/UwBV4=" crossorigin="anonymous">
+
         <!-- Custom styles for this template -->
         <link href="css/style.css" rel="stylesheet">
         <link href="fonts/antonio-exotic/stylesheet.css" rel="stylesheet">
@@ -40,6 +43,7 @@
                                     <li><a><i class="fa fa-twitter"></i></a></li>
                                     <li><a><i class="fa fa-linkedin"></i></a></li>
                                     <li><a><i class="fa fa-instagram"></i></a></li>
+                                    <li><a><i class="fa fa-discord"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -461,7 +465,7 @@
                                     <li><a href="about.html">Conventions</a></li>
                                     <li><a href="rooms.html">Profile</a></li>
                                     <li><a href="gallery.html">Chat</a></li>
-                                    <li><a href="#">Discord</a></li>
+                                    <li><a href="dinning.html">Discord</a></li>
                                     <li> <a href="news.html">Forum</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
