--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                                             <li><a data-hover="Conventions"  class="active"><span>Conventions</span></a></li>
                                             <li><a data-hover="Profile"  href="rooms.html"><span>Profile</span></a></li>
                                             <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
-                                            <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
+                                            <li><a data-hover="Discord" href="dinning.html"><span>Discord</span></a></li>
                                             <li><a data-hover="Forum" href="news.html"><span>Forum</span></a></li>
                                             <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
@@ -520,7 +520,7 @@ December 22-23, 2018;Comic Fiesta 2018;Kuala Lumpur, Malaysia;Anime;Active
                                     <li class="active"><a>Conventions</a></li>
                                     <li><a href="rooms.html">Profile</a></li>
                                     <li><a href="gallery.html">Chat</a></li>
-                                    <li><a href="#">MegaChat</a></li>
+                                    <li><a href="dinning.html">Discord</a></li>
                                     <li> <a href="news.html">Forum</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
