--- a/dinning.html
+++ b/dinning.html
@@ -72,7 +72,7 @@
                                             <li><a data-hover="Conventions"  href="about.html"><span>Conventions</span></a></li>
                                             <li><a data-hover="Profile"  href="rooms.html"><span>Profile</span></a></li>
                                             <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
-                                            <li><a data-hover="MegaChat" class="active"><span>MegaChat</span></a></li>
+                                            <li><a data-hover="Discord" class="active"><span>Discord</span></a></li>
                                             <li><a data-hover="Forum" href="news.html"><span>Forum</span></a></li>
                                             <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
@@ -172,7 +172,7 @@
                                     <li><a href="about.html">Conventions</a></li>
                                     <li><a href="rooms.html">Profile</a></li>
                                     <li><a href="gallery.html">Chat</a></li>
-                                    <li class="active"><a>MegaChat</a></li>
+                                    <li class="active"><a>Discord</a></li>
                                     <li> <a href="news.html">Forum</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
