--- a/news.html
+++ b/news.html
@@ -73,7 +73,7 @@
                                             <li><a data-hover="Conventions"  href="about.html"><span>Conventions</span></a></li>
                                             <li><a data-hover="Profile"  href="rooms.html"><span>Profile</span></a></li>
                                             <li><a data-hover="Chat"  href="gallery.html"><span>Chat</span></a></li>
-                                            <li><a data-hover="MegaChat" href="dinning.html"><span>MegaChat</span></a></li>
+                                            <li><a data-hover="Discord" href="dinning.html"><span>Discord</span></a></li>
                                             <li><a data-hover="Forum" class="active"><span>Forum</span></a></li>
                                             <li><a data-hover="Contact Us" href="contact.html"><span>Contact Us</span></a></li>
                                         </ul>
@@ -173,7 +173,7 @@
                                     <li><a href="about.html">Conventions</a></li>
                                     <li><a href="rooms.html">Profile</a></li>
                                     <li><a href="gallery.html">Chat</a></li>
-                                    <li><a href="#">MegaChat</a></li>
+                                    <li><a href="dinning.html">Discord</a></li>
                                     <li class="active"><a>Forum</a></li>
                                     <li> <a href="contact.html">Contact</a></li>
                                 </ul>
